--- a/孤山梅林.css
+++ b/孤山梅林.css
@@ -25,7 +25,7 @@ body{
     position: fixed;
     height: 70px;
     top: 0;
-    left: -40px;
+    /*left: -40px;*/
     width: 100%;
     z-index: 1;
 }
