--- a/homepage/css/homepage.css
+++ b/homepage/css/homepage.css
@@ -1,24 +1,11 @@
 @charset "UTF-8";
-.inner .slideshow img, .inner .lens {
+.inner .slideshow img, .inner .lens img {
   position: absolute;
   width: 100%;
-  height: 720px;
 }
 
 .inner .slideshow img {
   display: none;
-}
-.inner .lens {
-  top: 0;
-  box-shadow: inset 0 0 700px 500px rgba(0, 0, 0, 0.2), inset 0 0 200px 100px rgba(0, 0, 0, 0.8);
-  opacity: 0.6;
-}
-.inner .topic img {
-  position: absolute;
-  left: 40%;
-  top: 40%;
-  vertical-align: middle;
-  width: 20%;
 }
 
 /* JavsScript 無効時 */
@@ -51,7 +38,7 @@ nav .nav-item a {
   width: 100%;
   background: transparent;
 }
-.parallax-window img {
+.parallax-window .poem {
   position: relative;
   top: 400px;
   left: 1100px;
@@ -61,10 +48,39 @@ nav .nav-item a {
 }
 .parallax-window p {
   position: relative;
-  top: -120px;
+  top: -60px;
   background-color: black;
   color: #fff;
   font-size: 18px;
   padding: 20px;
   margin-bottom: -1em;
+}
+.parallax-window .blocks {
+  position: relative;
+  left: 7%;
+}
+.parallax-window .blocks .bd {
+  position: relative;
+  top: 40px;
+  width: 25%;
+  margin: 25px;
+  text-align: center;
+}
+.parallax-window #gd {
+  position: absolute;
+  width: 20%;
+  top: 13em;
+  left: 8%;
+}
+.parallax-window #id {
+  position: absolute;
+  width: 20%;
+  top: 13em;
+  left: 40%;
+}
+.parallax-window #wri {
+  position: absolute;
+  width: 20%;
+  top: 13em;
+  left: 75%;
 }
