--- a/homepage/sass/homepage.scss
+++ b/homepage/sass/homepage.scss
@@ -1,7 +1,7 @@
 %size{
     position: absolute;
     width: 100%;
-    height: 720px;
+    // height: 100%;
 }
 
 .inner{
@@ -15,19 +15,9 @@
         }
     }
     .lens{
-        @extend %size;
-        top:0;
-        box-shadow: inset 0 0 700px 500px rgba(0, 0, 0, 0.2),
-                    inset 0 0 200px 100px rgba(0, 0, 0, 0.8);
-        opacity: 0.6;
-    }
-
-    .topic img{
-        position: absolute;
-        left: 40%;
-        top: 40%;
-        vertical-align: middle;
-        width: 20%;
+        img{
+            @extend %size;
+        }
     }
 
 }
@@ -64,7 +54,8 @@ nav{
                 min-height: 720px;
                 width: 100%;              
                 background: transparent;
-                img{
+
+                .poem{
                     position: relative;
                     top: 400px;
                     left: 1100px;
@@ -74,7 +65,7 @@ nav{
                 }
                 p{
                     position: relative;
-                    top: -120px;
+                    top: -60px;
                     background-color: rgba(0,0,0,1);
                     color: #fff;
                     font-size: 18px;
@@ -82,5 +73,39 @@ nav{
                     margin-bottom: -1em;
  
                 }
+                .blocks{
+                    position: relative;
+                    // margin: auto;
+                    // left: 100px;
+                    left: 7%;
+                    //border: 5px solid #000;
+
+                    .bd{
+                        position: relative;
+                        top: 40px;
+                        width: 25%;
+                        margin: 25px;
+                        text-align: center;
+                        //border: 5px solid #000;
+                    }
+                }
+
+@mixin pos($wid, $top, $left){
+    position: absolute;
+    width: $wid;
+    top: $top;
+    left: $left;
+}              
+
+                    #gd{
+                        @include pos(20%, 13em, 8%);
+                    }
+                    #id{
+                        @include pos(20%, 13em, 40%);
+                    }
+                    #wri{
+                        @include pos(20%, 13em, 75%);
+                    }
+               
             }
 
