--- a/homepage/sass/homepage.scss
+++ b/homepage/sass/homepage.scss
@@ -1,8 +1,11 @@
+@import "compass/layout/sticky-footer";
+
 %size{
     position: absolute;
     width: 100%;
     // height: 100%;
 }
+
 
 .inner{
 
@@ -17,6 +20,7 @@
     .lens{
         img{
             @extend %size;
+            top: 0;
         }
     }
 
@@ -27,15 +31,17 @@
 }
 
 nav{
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0,0,0,0.6);
     position: fixed;
-    right: 5px;
-    width: 105%;
-    z-index: 1;
-
+    right: 15px;
+    width: 100%;
+    z-index: 100;
+    top: 0;
     .nav-item{
         float: right;
-        padding: 5px;
+        padding-top: 5px;
+        padding-bottom: 5px;
+        padding-right: 20px;
 
         a{
             color: #fff;
@@ -51,9 +57,15 @@ nav{
     }
 }
 .parallax-window {
-                min-height: 720px;
+                min-height: 800px;
                 width: 100%;              
                 background: transparent;
+                margin-bottom: -1em;
+
+                .intro{
+                    text-align: center;
+                    font-size: 18px;
+                }
 
                 .poem{
                     position: relative;
@@ -63,49 +75,77 @@ nav{
                     opacity: 0;
                     margin-top: -1em;
                 }
-                p{
+                h1{
                     position: relative;
-                    top: -60px;
+                    top: -30px;
                     background-color: rgba(0,0,0,1);
                     color: #fff;
-                    font-size: 18px;
+                    font-size: 36px;
                     padding: 20px;
-                    margin-bottom: -1em;
+                    //margin-bottom: -1em;
+                    z-index: 200;
  
                 }
-                .blocks{
-                    position: relative;
-                    // margin: auto;
+                .section{
+                    // display:flex;
+                    // align-items:center;
+                    // justify-content:center;
+                    //margin: 60px;
+                    //margin-bottom: -2em; //扣掉下面空白
+                    text-align: center;
+                    padding:100px;
+                    //margin-top: -2em;
+                    // width: 450px;
+                    // height: 500px;
+                    // padding: 20px;
+                    // top: 50px;
+                    // border: 5px solid #000;
                     // left: 100px;
-                    left: 7%;
+                    //left: 7%;
                     //border: 5px solid #000;
-
-                    .bd{
+                    .button{
                         position: relative;
-                        top: 40px;
-                        width: 25%;
-                        margin: 25px;
-                        text-align: center;
                         //border: 5px solid #000;
+                        margin-top: -5em;
+                        text-align: center;
+                        
+                        
+                        .bd{
+                            position: relative;                          
+                            //top: 30px;
+                            width: 400px;
+                            //margin: 5px;
+                            
+                        }
+                        .wd{
+                            width: 300px;
+                            margin-top: 10px;
+                            position: relative;
+                            text-align: center;
+                            //margin: auto;
+
+                        }
                     }
                 }
 
-@mixin pos($wid, $top, $left){
-    position: absolute;
-    width: $wid;
-    top: $top;
-    left: $left;
-}              
+// @mixin wid($wid){    
+//     width: $wid;
+// }              
 
-                    #gd{
-                        @include pos(20%, 13em, 8%);
-                    }
-                    #id{
-                        @include pos(20%, 13em, 40%);
-                    }
-                    #wri{
-                        @include pos(20%, 13em, 75%);
-                    }
+//                     #gd{
+//                         @include wid(260px);
+//                     }
+//                     #id{
+//                         @include wid(300px);
+//                     }
+//                     #wri{
+//                         @include wid(270px);
+//                     }
                
             }
+@include sticky-footer(60px); 
 
+#footer{
+    background-color: #000;
+    color: #fff;
+}
